--- a/customer-success/solutions-architects/tools-and-resources/pov/index.html.md.erb
+++ b/customer-success/solutions-architects/tools-and-resources/pov/index.html.md.erb
@@ -13,7 +13,7 @@ description: Proof of Value (POV)
 
 ## Proof of Value (POV)
 {:.no_toc}
-Proof of value is a combination of a Proof of Concept (POC) and the communication of the expected business value of a solution.  The solution, its practical application, and how it drives specific business value are proven and documented through the POV process.
+Proof of value is a combination of technical evaluation and the communication of the expected business value of a solution.  The solution, its practical application, and how it drives specific business value are proven and documented through the POV process.
 
 Solution Architects are instrumental in guiding prospects and customers to carry out a successful Proof of **Value**. POV's should focus on specific prospect/customer business outcomes that cannot be achieved through other consultative interactions.
 
