--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -250,7 +250,7 @@ For merge request reviews:
 
 The technical writing team supports a large amount of content.
 
-The number of pages in the four primary repositories (GitLab, Omnibus, Charts, and Runner):
+The number of pages in the five primary repositories (GitLab, Omnibus, Charts, Operator, and Runner):
 
 | Date          | # of pages |
 |---------------|------------|
@@ -259,8 +259,9 @@ The number of pages in the four primary repositories (GitLab, Omnibus, Charts, a
 | June 2022     | 1,633      |
 | Sept 2022     | 1,785      |
 | Dec 2022      | 1,840      |
+| Mar 2023.     | 1,929      |
 
-**Change between May 2020 and Dec 2022:** 675 more pages (a 58% increase)
+**Change between May 2020 and Mar 2022:** 764 more pages (a 65% increase)
 
 The number of words in these repositories:
 
@@ -271,8 +272,9 @@ The number of words in these repositories:
 | June 2022     | 2,166,052  |
 | Oct 2022      | 2,271,350  |
 | Dec 2022      | 2,397,335  |
+| Mar 2023      | 2,546,466  |
 
-**Change between May 2020 and Dec 2022:** 1,206,964 more words
+**Change between May 2020 and Mar 2023:** 1,356,095 more words
 
 The word count has more than doubled in this timeframe.
 
