--- a/culture/all-remote/learning-and-development/index.html.md.erb
+++ b/culture/all-remote/learning-and-development/index.html.md.erb
@@ -120,7 +120,7 @@ For a remote team to work well, managers should coach their team in healthy remo
 * creating an [optimal workspace](/company/culture/all-remote/workspace/)
 * understanding the importance of [self-learning/self-service](/company/culture/all-remote/self-service/).
 
-To stay ahead in L&D, GitLab prioritizes personal [Growth & Development opportunities](/handbook/total-rewards/benefits/general-and-entity-benefits/growth-and-development/) by allowing team members to take advantage of up to $10,000 USD of training per calendar year. This amount can be used for professional development, certifications, workshops, coaching, language courses, and much more!
+To stay ahead in L&D, GitLab prioritizes personal [Growth & Development opportunities](/handbook/total-rewards/benefits/general-and-entity-benefits/growth-and-development/) by allowing team members to take advantage of training opportunities for professional development, certifications, workshops, coaching, language courses, and much more!
 
 ### Trust and communication
 
