Add compliance meetings and updates to handbook

--- a/development/sec/govern/compliance/_meetings.erb
+++ b/development/sec/govern/compliance/_meetings.erb
@@ -2,10 +2,10 @@ Although we have a bias for asynchronous communication, synchronous meetings are
 
 | Frequency | Meeting                              | DRI         | Possible topics                                                                                        |
 |-----------|--------------------------------------|-------------|--------------------------------------------------------------------------------------------------------|
-| Weekly    | Group-level meeting                  | Engineering Managers | Ensure current release is on track by walking the board, unblock specific issues                       |
-| Monthly   | Planning meetings (Pre and Final)                    | Product Managers         | See [Planning](#milestone-planning) section |
+| Weekly (alternating between APAC/EMEA and AMER)    | Group-level meeting                  | Engineering Manager | Ensure current release is on track by walking the board, unblock specific issues                       |
+| Monthly   | Planning meeting                    | Product Manager         | See [Planning](#milestone-planning) section |
 
-For one-off, topic specific meetings, please always consider recording these calls and sharing them (or taking notes in a [publicly available document](https://docs.google.com/document/d/1kE8udlwjAiMjZW4p1yARUPNmBgHYReK4Ks5xOJW6Tdw/edit)).
+For one-off, topic specific meetings, please always consider recording these calls and sharing them (or taking notes in a publicly available document).
 
 Agenda documents and recordings can be placed in the [shared Google drive](https://drive.google.com/drive/u/0/folders/0ALpc3GhrDkKwUk9PVA) (internal only) as a single source of truth.
 
