--- a/development/sec/govern/compliance/index.html.md.erb
+++ b/development/sec/govern/compliance/index.html.md.erb
@@ -112,6 +112,11 @@ During the `workflow::verification` process, we determine whether the Issue requ
 ## Meetings
 <%= partial("handbook/engineering/development/sec/govern/compliance/meetings.erb") %>
 
+## Group News
+The EM will usually create a general update for the group on what is happening within the company and within the group on a weekly basis.
+This update currently takes the form of an issue within the [compliance update Epic](https://gitlab.com/groups/gitlab-org/govern/compliance/-/epics/3)
+
+The Compliance EM also contributes to issues in the [Govern stage weekly updates](https://gitlab.com/groups/gitlab-com/-/epics/2126) epic. 
 
 ## Group Members
 The following people are permanent members of the group:
