Fix Build Board link for Product Planning

--- a/development/dev/plan/product-planning/index.html.md.erb
+++ b/development/dev/plan/product-planning/index.html.md.erb
@@ -199,7 +199,7 @@ it, but please post in [#s_plan] if that's the case, as this probably
 means the issue should be better specified.
 
 [workflow columns]: /handbook/product-development-flow/
-[Build Board]: https://gitlab.com/groups/gitlab-org/-/boards/1235846?label_name[]=group%3A%3Acertify&milestone_title=Started
+[Build Board]: https://gitlab.com/groups/gitlab-org/-/boards/1569369?label_name[]=devops%3A%3Aplan&label_name[]=group%3A%3Aproduct%20planning&milestone_title=Started
 [#s_plan]: https://gitlab.slack.com/archives/s_plan
 
 ### Direction Items
