Remove blog posts

--- a/culture/index.html.md.erb
+++ b/culture/index.html.md.erb
@@ -139,7 +139,7 @@ First 10 people get access to GitLab Cloud (now known as GitLab.com).
 
 #### _November 13th, 2012_
 
-[GitLab CI is officially announced](/blog/2012/11/13/continuous-integration-server-from-gitlab/){:data-ga-name="Gitlab CI"}{:data-ga-location="body"}.
+GitLab CI is officially announced.
 
 #### _July 22nd, 2013_
 
