--- a/metrics/ops/release/index.html.md.erb
+++ b/metrics/ops/release/index.html.md.erb
@@ -9,4 +9,4 @@ title: "Release Stage Engineering Metrics"
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-<%= partial "handbook/engineering/metrics/partials/team_dashboard.erb", locals: { filter_type: "stage", filter_value: "Release" } %>
+<%= partial "handbook/engineering/metrics/partials/team_dashboard.erb", locals: { filter_type: "stage", filter_value: "Deploy" } %>
