Add tech discovery meetings to Environments handbook

--- a/development/ops/deploy/environments/index.html.md.erb
+++ b/development/ops/deploy/environments/index.html.md.erb
@@ -79,6 +79,25 @@ The refinement process is described in the [issue template](https://gitlab.com/g
 
 ### Technical Discovery meetings
 
+Sometimes we will encounter issues that need the input of the whole team to be refined and then worked on, such issues will be selected as a topic for a Technical Discovery meeting.
+We try to be conscious of sync time and so we expect a maximum of two of these meetings for each milestone. 
+A technical discovery meeting consists of:
+
+- 2 Meetings across timezones so that everyone has a fair opportunity to join the sync meeting.
+    - APAC/EMEA
+    - EMEA/AMER
+- The 2 meetings are recorded and share the same agenda.
+- The meetings are announced at least one week before they will be held and each participant must familiarize themselves with the issue that is being investigated prior to attending one of the meetings.
+- Discussing the topic async in advance in the issue/epic is encouraged.
+- The PM will open the conversation either by describing the use case/scenario or by recording a quick video about it.
+- The meetings are agenda first and everyone is expected to write their comments and questions in the agenda before the first meeting.
+- If the agenda is empty the meeting is cancelled.
+- The conversations in the meeting must be recorded in the same documents as notes.
+- One host is decided for every meeting, and they are responsible to drive the conversation forward.
+- In the last meeting someone is appointed to summarize the conversation either in the original issue or a technical document.
+
+The goal of technical discovery meetings is to come up with a concrete technical proposal for the question at hand. We should not force a proposal, but aim to get there and write the conclusion accordingly with potential follow-ups.
+
 ### Design pairing
 
 ### Planning
