add status update info

--- a/infrastructure/team/reliability/general.html.md.erb
+++ b/infrastructure/team/reliability/general.html.md.erb
@@ -35,6 +35,13 @@ The General Team is assigned issues based on the services they own.  This curren
 ### Overlap
 It is not always easy or possible to definitively determine the primary services associated with an issue, incident, or other piece of work.  When there is a lack of clarity, General Team members should collaborate with other Reliability Teams to determine the best path forward.  If necessary reach out to any Reliability Engineering Manager for assistance.
 
+## Status Updates
+The General Team provides weekly updates an all Epics following the [Reliability Process for Epics](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#epics).  Epic updates are automatically reflected in the [GitLab SaaS Reliability Work Queue epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/898).
+
+OKRs are updated every Wednesday as required by the [Reliability Process for OKR Updates](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/#okrs)
+
+[Current OKRs](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=closed_at_desc&state=opened&type%5B%5D=objective&label_name%5B%5D=Reliability%3A%3AGeneral&first_page_size=100)
+
 ## Performance Indicators
 
  * OKRs - OKRs are generated each quarter based on current commitments while also including spare capacity for unplanned work.
