--- a/development/dev/plan-project-management/index.html.md.erb
+++ b/development/dev/plan-project-management/index.html.md.erb
@@ -81,8 +81,10 @@ DRI rotation:
 | Alexandru Croitor | 2023-01-23 | 2023-02-03 | [Moving work items](https://gitlab.com/gitlab-org/gitlab/-/issues/387304) |
 | Simon Knox | 2023-02-06 | 2023-02-17 | [Frontend of work items at the group level](https://gitlab.com/gitlab-org/gitlab/-/issues/390432) |
 | Heinrich Lee Yu | 2023-02-20 | 2023-03-03 | [Group by work items](https://gitlab.com/gitlab-org/gitlab/-/issues/392418) |
-| Coung Ngo | 2023-03-06 | 2023-03-17 | |
-| Mario Celi | 2023-03-20 | 2023-03-31 | |
+| Coung Ngo | 2023-03-13 | 2023-03-24 | [Group by work items](https://gitlab.com/gitlab-org/gitlab/-/issues/392418) ~frontend focused |
+| Mario Celi | 2023-03-27 | 2023-04-07 | |
+| Deepika Guliana | 2023-04-10 | 2023-04-21 | |
+| Eulyeon Ko | 2023-04-24 | 2023-05-05 | |
 
 
 #### Historical Capacity
