--- a/support/workflows/gitlab-com_overview.html.md.erb
+++ b/support/workflows/gitlab-com_overview.html.md.erb
@@ -59,12 +59,13 @@ Enterprise user accounts belong to the company that purchased a GitLab subscript
 
 In situations where [proof of account ownership is required](account_verification.html), then either the relevant user or requesting owner can pass the verification process.
 
-A user is considered an enterprise user when **one** of the following conditions is met:
+A user is considered an enterprise user when **all** of the following conditions are met:
 
-1. The user has a `provisioned_by_group_id` value that is the same as the organization's group's ID, **or**
-1. The user's primary email has a domain that is owned by the company of the paid group, _and_ the user account meets **one** of the following conditions:
+1. The user's primary email has a domain that is owned by the company of the paid group, _and_
+1. The user account meets **one** of the following conditions:
     - was created 2021-02-01 or later.
     - has a SAML or SCIM identity tied to the organization's group.
+    - has a `provisioned_by_group_id` value that is the same as the organization's group's ID.
     - is a member of the organization's group, where the subscription was purchased or renewed 2021-02-01 or later.
 
 If the Owner is requesting access to an account which has a primary email in the company domain, but _does not meet_ any of the second conditions, then we must treat the account as belonging to the user. In this case, the only recourse for the Owner is to send a request _from the primary email account_ and then validate the account as a personal User account.
