Correcting a typo from 'cange' to 'change' (Under 1B)

--- a/git-page-update/index.html.md.erb
+++ b/git-page-update/index.html.md.erb
@@ -284,7 +284,7 @@ _Please be aware that the path to the images folder in this video is out of date
 1. Click on `Yes Commit to a new branch`.
 1. You will then be in the `New branch name` section. Enter your branch name, in the format of `yourinitials-add-YOURNAME-to-team-page-date` or similar. Example: `plh-add-paulalilyherbert-to-team-page-feb06` and press `Return/Enter`.
 1. Click on `Create MR`. If this message disappears, click on the notification bell icon on the bottom right, and it will bring back the message. 
-1. In the Desciption box, explain `Why is this cange being made?` as decribed. For this specific MR, you can enter something like: `Adding my information and picture to the team page due to onboarding tasks.` 
+1. In the Desciption box, explain `Why is this change being made?` as decribed. For this specific MR, you can enter something like: `Adding my information and picture to the team page due to onboarding tasks.` 
 1. Scroll down and `Create merge request`.
 1. Review the Author Checklist and check off all applicable tasks. Add your People Connect onboarding team member and Manager as Reviewers. If your manager has a gold triangle symbol with an exclamation mark on their bottom right section of their avatar photo, it means that they do not have merge rights to the team page so you can assign the MR to your People Connect team member if that is the case. If there is no triangle on your manager avatar, you may assign the MR to your manager.
 
