--- a/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
+++ b/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
@@ -45,6 +45,7 @@ please reach out to the dashboard owner or tag `@product-analysts` in the `#data
 | [Time to First Adoption](https://app.periscopedata.com/app/gitlab/1088268/Time-to-First-Adoption)| By plan-level, see the days till inital adoption of all SaaS events.| FY23 Q4 | N |
 | [SaaS Purchase Funnel](https://app.periscopedata.com/app/gitlab:safe-dashboard/1022191/Saas-purchase-flow-funnel-(all-views-to-checkout-page))| Purchase funnel for SaaS subscriptions.| FY23 Q2 | Y |
 | [Self-Managed Purchase Funnel via Customer Portal](https://app.periscopedata.com/app/gitlab:safe-dashboard/1019118/Subscription-purchase-flow-for-Customer-Portal)| Purchase funnel for Self-Managed subscriptions through Customer portal| FY23 Q2 | Y |
+| [Service Integration Impact Dashboard](https://app.periscopedata.com/app/gitlab:safe-dashboard/1106686/Service-Integration-Impact) | Shows how different service integrations impact event adoption among paid namespaces. | FY24 Q1 | Y |
 
 ### Analysis & Insights
 
@@ -65,3 +66,4 @@ please reach out to the dashboard owner or tag `@product-analysts` in the `#data
 | [Quality SaaS Signup Metric 2022](https://docs.google.com/presentation/d/1xHBrnvwdMxQGqmX0TtcQz5tUYsAeU6CAMnpcDlhHUpc/edit?usp=sharing) | Covers the development of a Growth and Marketing metric used to narrow down to a subset of the Gitlab.com user population with a higher likelihood of converting to paid. | FY23 Q3 | 
 | [SaaS Team Activation Metric 2022](https://docs.google.com/presentation/d/1rJG8FaqEjfgA-Nz9Ww3blgcUwRGzri7CeKkn1e2eEHY/edit?usp=sharing) | Covers the development of a Growth and Marketing metric used to identify team actions performed in the 1st 14 days that are predictive of paid conversion and retention. | FY23 Q4 | 
 | [Delayed Value Analysis](https://gitlab.com/gitlab-data/product-analytics/-/issues/781#note_1153295255) | Studies key feature usage among Trial-to-Paid conversions and presents how trial feature adoption expedites paid feature adoption.| FY23 Q4 |
+| [Groups per Organization Metric Exploration](https://gitlab.com/gitlab-data/product-analytics/-/issues/982#note_1282380262) | Establishes usage benchmarks (days used per month and consecutive months used) for group event usage.| FY24 Q1 |
