--- a/development/enablement/systems/distribution/index.html.md.erb
+++ b/development/enablement/systems/distribution/index.html.md.erb
@@ -252,7 +252,7 @@ In Distribution we strive for the following in our public projects:
 1. Uphold our [Community Code of Conduct](/community/contribute/code-of-conduct/).
 1. Enable [GitLab's mission that everyone can contribute.](https://about.gitlab.com/company/mission/#mission).
 1. Show our work in [public](#public-by-default).
-1. [Recognize and thank](https://about.gitlab.com/handbook/marketing/community-relations/code-contributor-program/#recognition-for-contributors) contributors for their work.
+1. [Recognize and thank](/handbook/marketing/community-relations/contributor-success/community-contributors-workflows.html#recognition-for-contributors) contributors for their work.
 1. Respect contributors donated time by providing [a timely review turnaround time](/handbook/engineering/workflow/code-review/#review-turnaround-time).
 
 ### Working with Open Source communities
