Add design pair meetings to Environments handbook

--- a/development/ops/deploy/environments/index.html.md.erb
+++ b/development/ops/deploy/environments/index.html.md.erb
@@ -100,6 +100,15 @@ The goal of technical discovery meetings is to come up with a concrete technical
 
 ### Design pairing
 
+Each week the Product Designer hosts a design pairing session with the team on Thursdays at 1:30pm UTC. The goal of the design pairing sessions is to give the team more insight into what Product Design is currently working on, share feedback and questions, as well as give us a space to brainstorm and work together through bigger problems. Anyone is encouraged to propose topics or existing user problems that could use some brainstorming together as a team. A design pairing session consists of: 
+
+- [An agenda document](https://docs.google.com/document/d/1osEJL4S2xe7AIgWoInIPoup-A2XuvqSZe5YNMFPTilo/edit?usp=sharing) with the weekly topic prepared the day before.
+- 30 minutes of the call will be dedicated to a design walkthrough or brainstorming session. 
+- 20 minutes of the call will be dedicated to a Q&A from the engineering team (previously know as the FE/UX sync). 
+- A recording which will be posted to the team's [Youtube playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0Kq-lA3_JctMdX0y4um3BGmV).
+
+If there are no topics, the meeting can be cancelled for the week.
+
 ### Planning
 
 #### Milestone Planning
