Add UI text to levels of edit

--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -355,7 +355,7 @@ Technical Writers are assigned to review merge requests that contain documentati
 
 ### Levels of edit
 
-The Technical Writers edit the documentation based on the following levels of edit:
+The Technical Writers use the following levels of edit:
 
 **Light**
 
@@ -371,9 +371,10 @@ The Technical Writers edit the documentation based on the following levels of ed
 
 - Ensure the pipeline passes and no grammar, spelling, or punctuation errors exist.
 - Ensure the content is clear, discoverable, navigable, and written with the user's perspective in mind.
-- Ensure the content meets the guidelines in the [Documentation Style Guide](https://docs.gitlab.com/ee/development/documentation/styleguide/).
+- Ensure the content meets the guidelines in the [Documentation Style Guide](https://docs.gitlab.com/ee/development/documentation/styleguide/). 
 - Ensure the content conforms to the defined [topic types](https://docs.gitlab.com/ee/development/documentation/topic_types/).
 - Ensure the content fits well into the larger documentation set and does not duplicate information in other areas.
+- For UI text, ensure the content meets the standards defined in the [Pajamas Design System](https://design.gitlab.com/) and the [Technical Writer Word List](https://docs.gitlab.com/ee/development/documentation/styleguide/word_list.html).
 
 #### How the writers apply the levels of edit
 
@@ -403,6 +404,7 @@ These items receive a **heavy** edit:
 
 - Topic type restructuring efforts (["CTRT"](https://docs.gitlab.com/ee/development/documentation/topic_types/))
 - OKR work
+- UI text
 
 In all cases, the Technical Writer confirms that an authoritative source has checked the documentation for technical accuracy.
 The Technical Writer can serve as that authoritative source if they have the required knowledge or
