--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -28,10 +28,8 @@ The following teams comprise the Ops sub-department:
 - Package stage - [handbook](/handbook/engineering/development/ops/package/), [jtbd](/handbook/engineering/development/ops/package/jtbd/)
     - Container Registry - [handbook](/handbook/engineering/development/ops/package/container-registry/)
     - Package Registry - [handbook](/handbook/engineering/development/ops/package/package-registry/)
-- Release stage
-    - Release - [handbook](/handbook/engineering/development/ops/release/), [jtbd](/handbook/engineering/development/ops/release/jtbd/)
-- Configure stage
-    - Configure - [handbook](/handbook/engineering/development/ops/configure/), jtbd
+- Deploy stage
+    - Environments - [handbook](/handbook/engineering/development/ops/deploy/environments/), jtbd
 - Monitor stage - [handbook](/handbook/engineering/development/ops/monitor/)
     - Monitor:Respond - [handbook](/handbook/engineering/development/ops/monitor/respond/), [jtbd](https://about.gitlab.com/handbook/engineering/development/ops/monitor/respond/jtbd/)
     - Monitor:Observability - [handbook](/handbook/engineering/development/ops/monitor/observability/), jtbd
