Remove the link to a github sign-in page for Postfacto

--- a/customer-success/solutions-architects/sa-practices/sa-retrospective-feedback/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/sa-retrospective-feedback/index.html.md.erb
@@ -42,7 +42,7 @@ Retrospective feedback sessions should ideally consider 3 areas:
 
 1. "It wasn't so great that..." >> Red
 
-The Solution Architecture team utilizes [**postfacto**](https://pivotal.github.io/postfacto/) as the main technology for agile retrospective feedback sessions. This is a digital whiteboard tool. The GitLab SA team has configured and implemented it internally. We run private retros which generally are password protected for teams. This postfacto internal session is hosted within our internal environment and are not publically accessable. Since it is an internally hosted solution, it is available to all internal GitLab teams and not only restricted to the SA team.
+The Solution Architecture team utilizes Postfacto as the main technology for agile retrospective feedback sessions. This is a digital whiteboard tool. The GitLab SA team has configured and implemented it internally. We run private retros which generally are password protected for teams. This postfacto internal session is hosted within our internal environment and are not publically accessable. Since it is an internally hosted solution, it is available to all internal GitLab teams and not only restricted to the SA team.
 
 **Note: We need a reference on how to access.** 
 
