Adding an update for quarterly async work weeks

--- a/development/ops/verify/index.html.md.erb
+++ b/development/ops/verify/index.html.md.erb
@@ -148,13 +148,17 @@ stable_counterparts(role_regexp: role_regexp, direct_manager_role: direct_manage
 
 ### Async Work Week
 
-In FY23-Q1, we're piloting [async work weeks in Verify and have proposed 2021-02-13 to 2022-02-19](https://gitlab.com/gitlab-org/verify-stage/-/issues/178). We're considering doing this once per quarter in the Verify stage. 
+In FY24, we are instituting [quarterly async work weeks](https://gitlab.com/gitlab-org/verify-stage/-/issues/412) in Verify. 
 Some of the benefits include reducing time spent in sync meetings, allowing for more focus, which aligns with our async-first communication and our Diversity and Inclusion value to bias towards more async communication.
 However, this doesn't preclude us from having any meetings, and it's up to meeting facilitators to decide accordingly. Exceptions might include: high priority issues and initiatives, social calls, coffee catch-ups. 
+This also does not mean that you should not default to async-first at other times. Having regularly scheduled async weeks ensures that our processes do not become depending on synchronous meetings.
 
 | Quarter | Async Week               |
 | ------- | ------------------------ |
-| FY23-Q1 | 2021-02-13 to 2022-02-19 |
+| FY24-Q1 | 2023-03-20 to 2022-03-24 |
+| FY24-Q2 | 2023-05-01 to 2023-05-05 |
+| FY24-Q3 | 2023-07-31 to 2023-08-04 |
+| FY24-Q4 | 2023-10-30 to 2023-11-03 |
 
 ## Verify Engineering - Async Updates
 
